--- a/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Home/Courses.cshtml
+++ b/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Home/Courses.cshtml
@@ -1,33 +1,34 @@
-@model List<OnlineEnrollmentSystem.Models.CourseModel>  
+@model OnlineEnrollmentSystem.Models.CourseListViewModel
 
-<h1>Available Courses</h1>  
+<h1>Available Courses</h1>
 
-<table>  
-    <thead>  
-        <tr>  
-            <th>Course Name</th>  
-            <th>Enrollment Status</th>  
-        </tr>  
-    </thead>  
-    <tbody>  
-        @foreach (var course in Model)  
-        {  
-            <tr>  
-                <td>@course.Name</td>  
-                <td>  
-                    @if (course.IsEnrolled)  
-                    {  
-                        <span style="color: green;">Enrolled</span>  
-                    }  
-                    else  
-                    {  
-                        <form method="post" action="/Home/Enroll">  
-                            <input type="hidden" name="CourseId" value="@course.Id" />  
-                            <button type="submit">Enroll</button>  
-                        </form>  
-                    }  
-                </td>  
-            </tr>  
-        }  
-    </tbody>  
+<table>
+    <thead>
+        <tr>
+            <th>Course Code</th>
+            <th>Enrollment Status</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var course in Model.Courses)
+        {
+            bool isEnrolled = Model.Enrollments.Any(e => e.CourseId == course.Id);
+            <tr>
+                <td>@course.CourseCode</td>
+                <td>
+                    @if (isEnrolled)
+                {
+                    <span style="color: green;">Enrolled</span>
+                }
+                else
+                {
+                    <form method="post" action="/Home/Enroll">
+                        <input type="hidden" name="CourseId" value="@course.Id" />
+                        <button type="submit">Enroll</button>
+                    </form>
+                }
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
