--- a/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/Grades.cshtml
+++ b/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/Grades.cshtml
@@ -5,7 +5,7 @@
 <table>  
     <thead>  
         <tr>  
-            <th>Course Name</th>  
+            <th>Course Code</th>  
             <th>Grade</th>  
         </tr>  
     </thead>  
@@ -13,7 +13,7 @@
         @foreach (var grade in Model)  
         {  
             <tr>  
-                <td>@grade.CourseName</td>  
+                <td>@grade.CourseCode</td>  
                 <td>@grade.Grade</td>  
             </tr>  
         }  
