Enroll now functional

--- a/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/View.cshtml
+++ b/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/View.cshtml
@@ -22,7 +22,7 @@
                 }
                 else
                 {
-                    <form method="post" action="/Home/Enroll">
+                    <form method="post" action="/Courses/Enroll">
                         <input type="hidden" name="CourseId" value="@course.Id" />
                         <button type="submit">Enroll</button>
                     </form>
