--- a/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/Index.cshtml
+++ b/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/Index.cshtml
@@ -1,10 +1,10 @@
 @model OnlineEnrollmentSystem.Models.CourseListViewModel
 
 @{
-    bool userRole = ViewBag.UserRole;
+    string userRole = ViewBag.UserRole;
 }
 
-<h1>@(!userRole ? "Available Courses" : "Your Courses")</h1>
+<h1>@(userRole == "student" ? "Available Courses" : "Your Courses")</h1>
 
 <table>
     <thead>
@@ -13,7 +13,7 @@
             <th>Units</th>
             <th>Slots</th>
             <th>Instructor</th>
-            <th>@(!userRole ? "Enrollment Status" : "Actions")</th>
+            <th>@(userRole == "student" ? "Enrollment Status" : "Actions")</th>
         </tr>
     </thead>
     <tbody>
@@ -25,7 +25,7 @@
             <td>@course.SlotsTaken / @course.Capacity</td>
             <td>@course.Instructor</td>
             <td>
-                @if (!userRole)
+                @if (userRole == "student")
                 {
                     @if (course.IsEnrolled)
                     {
@@ -39,7 +39,7 @@
                         </form>
                     }
                 }
-                else if (userRole)
+                else if (userRole == "instructor")
                 {
                     <a href="@Url.Action("View", "Courses", new { id = course.Id })">
                         <button type="button">View</button>
