--- a/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/Index.cshtml
+++ b/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/Index.cshtml
@@ -33,7 +33,7 @@
                     }
                     else
                     {
-                        <form method="post" action="/Courses/Enroll">
+                        <form method="post" action="/Student/Enroll">
                             <input type="hidden" name="CourseId" value="@course.Id" />
                             <button type="submit">Enroll</button>
                         </form>
@@ -41,7 +41,7 @@
                 }
                 else if (userRole == "instructor")
                 {
-                    <a href="@Url.Action("View", "Courses", new { id = course.Id })">
+                    <a href="@Url.Action("View", "Instructor", new { id = course.Id })">
                         <button type="button">View</button>
                     </a>
                 }
