--- a/DistributedOnlineEnrollmentSystem/ViewsNode/Views/Instructor/View.cshtml
+++ b/DistributedOnlineEnrollmentSystem/ViewsNode/Views/Instructor/View.cshtml
@@ -20,36 +20,36 @@
 
 <hr />
 
-@if (ViewBag.StudentData != null)
+@if (Model.Students != null)
 {
-<h2>Enrolled Students</h2>
+    <h2>Enrolled Students</h2>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Grade</th>
-            <th>Update Grade</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var s in ViewBag.StudentData)
-        {
-        <tr>
-            <td>@s.Name</td>
-            <td>@s.Grade</td>
-            <td>
-                <form asp-action="UpdateGrade" method="post">
-                    <input type="hidden" name="studentId" value="@s.StudentId" />
-                    <input type="hidden" name="courseId" value="@Model.Id" />
-                    <input type="text" name="grade" value="@s.Grade" />
-                    <button type="submit" class="btn btn-sm btn-success">Save</button>
-                </form>
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Grade</th>
+                <th>Update Grade</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var s in Model.Students)
+            {
+                <tr>
+                    <td>@s.Username</td>
+                    <td>@s.Grade</td>
+                    <td>
+                        <form asp-action="UpdateGrade" method="post">
+                            <input type="hidden" name="studentId" value="@s.Id" />
+                            <input type="hidden" name="courseId" value="@Model.Id" />
+                            <input type="text" name="grade" value="@s.Grade" />
+                            <button type="submit" class="btn btn-sm btn-success">Save</button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
 
 <a href="/Courses" class="btn btn-primary">Back to Courses</a>
