--- a/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/Index.cshtml
+++ b/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Courses/Index.cshtml
@@ -6,6 +6,14 @@
 
 <h1>@(userRole == "student" ? "Available Courses" : "Your Courses")</h1>  
 
+@if (userRole == "student")  
+{  
+    <!-- Button to navigate to Grades.cshtml -->  
+    <a href="@Url.Action("Grades", "Student")" class="btn btn-success" style="margin-bottom: 15px;">  
+        View Grades  
+    </a>  
+}  
+
 <table class="table table-striped table-bordered">  
     <thead class="table-dark">  
         <tr>  
@@ -53,23 +61,23 @@
                         @if (course.IsEnrolled)  
                         {  
                             <span style="color: green;">Enrolled</span>  
-                        }
-                        else
-                        {
-                        <form method="post" action="/Student/Enroll">
-                            <input type="hidden" name="CourseId" value="@course.Id" />
-                            <button class="btn btn-primary btn-sm" type="submit">Enroll</button>
-                        </form>
-                    }
-                }
-                else if (userRole == "instructor")
-                {
-                    <a href="@Url.Action("View", "Instructor", new { id = course.Id })">
-                        <button type="button">View</button>
-                    </a>
-                }
-            </td>
-        </tr>
-        }
-    </tbody>
+                        }  
+                        else  
+                        {  
+                        <form method="post" action="/Student/Enroll">  
+                            <input type="hidden" name="CourseId" value="@course.Id" />  
+                            <button class="btn btn-primary btn-sm" type="submit">Enroll</button>  
+                        </form>  
+                    }  
+                }  
+                else if (userRole == "instructor")  
+                {  
+                    <a href="@Url.Action("View", "Instructor", new { id = course.Id })">  
+                        <button type="button">View</button>  
+                    </a>  
+                }  
+            </td>  
+        </tr>  
+        }  
+    </tbody>  
 </table>
