--- a/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Student/Grades.cshtml
+++ b/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Student/Grades.cshtml
@@ -1,20 +1,20 @@
-@model List<OnlineEnrollmentSystem.Models.EnrollmentModel>
+@model List<OnlineEnrollmentSystem.Models.EnrollmentModel>  
 
-<h1>Your Grades</h1>  
+<h1 class="text-center mt-3 mb-4">Your Grades</h1>  
 
-<table>  
-    <thead>  
-        <tr>
-            <th>Course Code</th>
-            <th>Grade</th>
+<table class="table table-striped table-bordered">  
+    <thead class="table-dark text-center">  
+        <tr>  
+            <th>Course Code</th>  
+            <th>Grade</th>  
         </tr>  
     </thead>  
     <tbody>  
         @foreach (var grade in Model)  
         {  
             <tr>  
-                <td>@grade.CourseCode</td>
-                <td>@grade.Grade</td>
+                <td class="text-center align-middle">@grade.CourseCode</td>  
+                <td class="text-center align-middle">@grade.Grade</td>  
             </tr>  
         }  
     </tbody>  
