Return from Grades to Courses Button
For Student role

--- a/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Student/Grades.cshtml
+++ b/OnlineEnrollmentSystem/OnlineEnrollmentSystem.Views/Views/Student/Grades.cshtml
@@ -30,3 +30,8 @@
         }  
     </tbody>  
 </table>
+
+<div class="text-center mt-4">  
+    <a href="@Url.Action("Index", "Courses")" class="btn btn-primary">  
+        Back to Courses  
+    </a>
